--- a/app/globals.css
+++ b/app/globals.css
@@ -31,3 +31,26 @@ body {
     text-wrap: balance;
   }
 }
+
+/* Firefox */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: #0000;
+}
+
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: 0.2px;
+  scrollbar-color: #0000;
+}
+
+*::-webkit-scrollbar-track {
+  background: #0000;
+  border-radius: 5px;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #0000;
+  border-radius: 14px;
+  border: 3px solid var(--primary);
+}
